<resources>
    <string name="app_name">hop</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tab_create">create</string>
    <string name="tab_in_progress">pending</string>
    <string name="tab_archive">archive</string>

    <string name="task_add_btn">Add</string>
    <string name="task_title">Title</string>
    <string name="task_description">Description</string>
    <string name="task_date_and_time">Date and time</string>
    <string name="task_information">Information</string>
    <string name="task_date">Date</string>
    <string name="task_time">Time</string>
    <string name="task_payment">Payment</string>
    <string name="task_amount_from">From</string>
    <string name="task_amount_to">To</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_about">About</string>
    <string name="menu_share">Share</string>
    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_messages">Messages</string>
    <string name="pending_no_content">No pending tasks</string>
    <string name="task_skills">Skills</string>
    <string name="task_submit_btn">Submit</string>
    <string name="task_category">Category</string>
    <string name="task_address">Address</string>
    <string name="task_amount">Amount</string>
    <string name="dialog_attach_photo">Attach photo</string>
    <string name="dialog_gallery">Gallery</string>
    <string name="dialog_camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="lbl_choose_category">Category</string>
    <string name="GPSAlertDialogTitle">Location</string>
    <string name="GPSAlertDialogMessage">Sthg with location</string>

    <string-array name="categories">
        <item>Choose category</item>
        <item>a</item>
        <item>b</item>
        <item>c</item>
        <item>d</item>
        <item>e</item>
        <item>f</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_tab">search</string>

</resources>
