<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/goupApp"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_menu_message"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>

    <!--<item android:title="ttt">-->
        <!--<menu>-->
    <group  android:id="@+id/goupAccount"
            android:checkableBehavior="single">
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_menu_account"
                android:title="@string/menu_account" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_exit" />
    </group>
        <!--</menu>-->
    <!--</item>-->

</menu>
